--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -50,7 +50,7 @@
 <div class="container-fluid p-0 mb-5">
   <div class="owl-carousel header-carousel position-relative">
     <div class="owl-carousel-item position-relative">
-      <img class="img-fluid" src="assets/img/carousel-1.jpg" alt="">
+      <img class="img-fluid style-img" src="assets/img/carousel-1.jpg" alt="" >
       <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center"
            style="background: rgba(24, 29, 56, .7);">
         <div class="container">
@@ -64,9 +64,6 @@
                 sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod
                 elitr.</p>
               <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft" routerLink="login">Login</a>
-
-
-
             </div>
           </div>
         </div>
