--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -159,8 +159,8 @@
     }
 
     .header-carousel .owl-carousel-item img {
-        position: absolute;
-        width: 100%;
+
+        width: 100% !important;
         height: 100%;
         object-fit: cover;
     }
