--- a/src/app/EduSchoolFrontOffice/Components/home-page/home-page.component.html
+++ b/src/app/EduSchoolFrontOffice/Components/home-page/home-page.component.html
@@ -1,7 +1,7 @@
 <!-- Navbar Start -->
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
   <a href="../../../../index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-    <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>eLEARNING</h2>
+    <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>EduSchool</h2>
   </a>
   <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
     <span class="navbar-toggler-icon"></span>
@@ -9,34 +9,29 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <div class="navbar-nav ms-auto p-4 p-lg-0">
       <a href="../../../../index.html" class="nav-item nav-link active">Accueil</a>
-
-
+      <a href="#" class="nav-item nav-link ">Présentation</a>
       <div class="nav-item dropdown">
-        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Ecole</a>
+        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Fonctionnalités</a>
         <div class="dropdown-menu fade-down m-0">
-          <a href="team.html" class="dropdown-item" routerLink="about">Qui nous </a>
-          <a href="testimonial.html" class="dropdown-item"  >enseignant</a>
-
+          <a href="#" class="dropdown-item" routerLink="about">Gestion pédagogique</a>
+          <a href="#" class="dropdown-item"  >Gestion des emplois du temps</a>
+          <a href="#" class="dropdown-item"  >Gestion de présence</a>
+          <a href="#" class="dropdown-item"  >Gestion cantine</a>
+          <a href="#" class="dropdown-item"  >Gestion de transport</a>
+          <a href="#" class="dropdown-item"  >Gestion des rendez-vous</a>
         </div>
       </div>
 
 
 
-      <a href="courses.html" class="nav-item nav-link" routerLink="courses">Cours</a>
-      <div class="nav-item dropdown">
-        <a href="#" class="nav-link ">Actualités</a>
-
-      </div>
+      <a href="courses.html" class="nav-item nav-link" routerLink="courses">A tous</a>
       <a href="contact.html" class="nav-item nav-link" routerLink="contact">Contact</a>
     </div>
-    <div class="nav-item dropdown">
-      <a  class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Préinscription<i
-        class="fa fa-arrow-right ms-3"></i></a>
-      <div class="dropdown-menu fade-down m-0">
-        <a href="team.html" class="dropdown-item" routerLink="preins"> Préinscription Eléve </a>
-        <a href="testimonial.html" class="dropdown-item"  routerLink="inscription">Candidature Enseignant </a>
-
-      </div>
+    <div class="nav-item px-2">
+      <button class="btn btn-primary py-2 px-4 d-flex align-items-center" >
+        Préinscription
+        <mat-icon>keyboard_arrow_right</mat-icon>
+      </button>
     </div>
 
 
@@ -56,15 +51,11 @@
         <div class="container">
           <div class="row justify-content-start">
             <div class="col-sm-10 col-lg-8">
-              <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Education En Ligne</h5>
-              <h1 class="display-3 text-white animated slideInDown">La meilleure platforme d'Education
-              </h1>
-              <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed
-                stet
-                sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod
-                elitr.</p>
-              <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft" routerLink="Dashboard">Login</a>
+              <span class="text-primary fs-4 mb-3 d-block">Plateforme pour la gestion scolaire</span>
+              <p class="fs-6 text-white mb-4 pb-2 ml-2">Notre plateforme de gestion de la scolarité est un outil intuitif et centralisé conçu pour simplifier et optimiser les processus administratifs dans les établissements éducatifs.</p>
+              <button class=" btn btn-primary py-md-3 px-md-5 me-3 ml-2" routerLink="Dashboard">Login</button>
             </div>
+            
           </div>
         </div>
       </div>
@@ -79,36 +70,32 @@
       <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
         <div class="service-item text-center pt-3">
           <div class="p-4">
-            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-            <h5 class="mb-3">Personel Qualifié</h5>
-            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i> <br>
+            <span class="mb-3">Suivi Pédagogique<br> Intégré </span>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
         <div class="service-item text-center pt-3">
           <div class="p-4">
-            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-            <h5 class="mb-3">Cours En Ligne</h5>
-            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+            <i class="fa fa-3x fa-globe text-primary mb-4"></i> <br>
+            <span class="mb-3">Planification et Gestion des Horaires</span>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
         <div class="service-item text-center pt-3">
           <div class="p-4">
-            <i class="fa fa-3x fa-home text-primary mb-4"></i>
-            <h5 class="mb-3">Système école</h5>
-            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+            <i class="fa fa-3x fa-home text-primary mb-4"></i> <br>
+            <span class="mb-3">Gestion Centralisée des Opérations</span>
           </div>
         </div>
       </div>
       <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
         <div class="service-item text-center pt-3">
           <div class="p-4">
-            <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-            <h5 class="mb-3">Education</h5>
-            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+            <i class="fa fa-3x fa-comment text-primary mb-4"></i> <br>
+            <span class="mb-3">Communication et <br> Organisation</span>
           </div>
         </div>
       </div>
@@ -125,36 +112,36 @@
         </div>
       </div>
       <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-        <h6 class="section-title bg-white text-start text-primary pe-3">Qui Nous?</h6>
-        <h1 class="mb-4"> eLEARNING</h1>
-        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-          eos. Clita erat ipsum et lorem et sit.</p>
-        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et
-          eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet
+        <h1 class=" text-start text-primary ">Qui Nous?</h1> 
+        <h4 class="mb-4">EduSchool</h4>
+        <p class="mb-4">S'engage à offrir une expérience éducative complète et enrichissante, 
+          où chaque élève est encouragé à atteindre son plein potentiel. 
         </p>
+        <p class="mb-4">
+          Grâce à notre approche pédagogique innovante et à notre plateforme de gestion scolaire intégrée, 
+          nous offrons un environnement dynamique où l'apprentissage est stimulé, les talents sont encouragés 
+          et la réussite est célébrée. Notre école est bien plus qu'un lieu d'enseignement,
+          c'est une communauté passionnée, où les élèves, les enseignants et les parents collaborent pour créer un 
+          avenir brillant pour chaque apprenant.
+        </p>
+      
         <div class="row gy-2 gx-4 mb-4">
           <div class="col-sm-6">
-            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Innovation</p>
           </div>
           <div class="col-sm-6">
-            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
+            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Accessibilité</p>
           </div>
           <div class="col-sm-6">
-            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate
+            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Interactivité
             </p>
           </div>
           <div class="col-sm-6">
-            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Skilled Instructors</p>
+            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Communication</p>
           </div>
-          <div class="col-sm-6">
-            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Online Classes</p>
-          </div>
-          <div class="col-sm-6">
-            <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>International Certificate
-            </p>
-          </div>
+        
         </div>
-        <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+       
       </div>
     </div>
   </div>
@@ -175,7 +162,7 @@
               <img class="img-fluid" src="../../../../assets/img/cat-1.jpg" alt="">
               <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3"
                    style="margin: 1px;">
-                <h5 class="m-0">Web Design</h5>
+                <span class="m-0">Web Design</span>
                 <small class="text-primary">49 Courses</small>
               </div>
             </a>
@@ -185,7 +172,7 @@
               <img class="img-fluid" src="../../../../assets/img/cat-2.jpg" alt="">
               <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3"
                    style="margin: 1px;">
-                <h5 class="m-0">Graphic Design</h5>
+                <span class="m-0">Graphic Design</span>
                 <small class="text-primary">49 Courses</small>
               </div>
             </a>
@@ -195,7 +182,7 @@
               <img class="img-fluid" src="../../../../assets/img/cat-3.jpg" alt="">
               <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3"
                    style="margin: 1px;">
-                <h5 class="m-0">Video Editing</h5>
+                <span class="m-0">Video Editing</span>
                 <small class="text-primary">49 Courses</small>
               </div>
             </a>
@@ -208,7 +195,7 @@
                style="object-fit: cover;">
           <div class="bg-white text-center position-absolute bottom-0 end-0 py-2 px-3"
                style="margin:  1px;">
-            <h5 class="m-0">Online Marketing</h5>
+            <span class="m-0">Online Marketing</span>
             <small class="text-primary">49 Courses</small>
           </div>
         </a>
@@ -240,7 +227,7 @@
             </div>
           </div>
           <div class="text-center p-4">
-            <h5 class="mb-0">Instructor Name</h5>
+            <span class="mb-0">Instructor Name</span>
             <small>Designation</small>
           </div>
         </div>
@@ -260,7 +247,7 @@
             </div>
           </div>
           <div class="text-center p-4">
-            <h5 class="mb-0">Instructor Name</h5>
+            <span class="mb-0">Instructor Name</span>
             <small>Designation</small>
           </div>
         </div>
@@ -280,7 +267,7 @@
             </div>
           </div>
           <div class="text-center p-4">
-            <h5 class="mb-0">Instructor Name</h5>
+            <span class="mb-0">Instructor Name</span>
             <small>Designation</small>
           </div>
         </div>
@@ -300,7 +287,7 @@
             </div>
           </div>
           <div class="text-center p-4">
-            <h5 class="mb-0">Instructor Name</h5>
+            <span class="mb-0">Instructor Name</span>
             <small>Designation</small>
           </div>
         </div>
@@ -321,7 +308,7 @@
       <div class="testimonial-item text-center">
         <img class="border rounded-circle p-2 mx-auto mb-3" src="../../../../assets/img/testimonial-1.jpg"
              style="width: 80px; height: 80px;">
-        <h5 class="mb-0">Client Name</h5>
+        <span class="mb-0">Client Name</span>
         <p>Profession</p>
         <div class="testimonial-text bg-light text-center p-4">
           <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et
