--- a/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/gestion-homework.component.html
+++ b/src/app/EduSchoolBackOffice/Components/GestionPedagogique/GestionHomeWork/gestion-homework/gestion-homework.component.html
@@ -1,1 +1,87 @@
-<p>gestion-homework works!</p>
+<div class="registration-form">
+    <form 
+    
+    >
+        <div class="form-icon">
+            <img src="assets/img/cour.png">
+        </div><!-- [formGroup]="courForm" -->
+
+
+        <div class="form-group">
+
+            <select class="form-select" id="validationCustom04" placeholder=" choisir nom Module *"
+            >
+                <option>...Select...</option>
+                <option ></option>
+
+            </select>
+            <!-- formControlName="idModule" [ngClass]="{ 'is-invalid': submitted && f.idModule.errors }"  (change)="onSelect($event)" -->
+            <!-- *ngFor="let s of subjects" value="{{s._id}}" -->
+            <div >
+                <!-- *ngIf="submitted && f.idModule.errors" class="invalid-feedback" {{s.nomModule}} -->
+                <div >
+                <!-- *ngIf="f.idModule.errors.required" style="color: rgb(32, 124, 124);" -->
+                    Nom de Module est Obligatoire
+                </div>
+            </div>
+
+        </div>
+
+        <div class="form-group">
+            <select class="form-select" id="validationCustom04" placeholder="Nom Matiere *"
+            >
+            <!-- formControlName="idMatiere" [ngClass]="{ 'is-invalid': submitted && f.idMatiere.errors } -->
+                <option>....Select...</option>
+                <option ></option>
+
+            </select>
+            <!-- *ngFor="let m of matiere" value="{{m._id}}" {{m.nomMatiere}}-->
+            <div >
+                <!-- *ngIf="submitted && f.idMatiere.errors" class="invalid-feedback" -->
+                <!-- *ngIf="f.idMatiere.errors.required" style="color: rgb(32, 124, 124);" -->
+                <div >Nom de Matiere est Obligatoire</div>
+            </div>
+
+        </div>
+        <div class="form-group">
+            <input type="file" #filePicker >
+                <!--  (change)='onImageSelected($event)' class="form-control " id="description"
+                placeholder=" liencours "  [ngClass]="{ 'is-invalid': submitted && f.img.errors }" -->
+                <div class="invalid-feedback">
+                    <!-- *ngIf="submitted && f.img.errors"  -->
+                    <div  style="color: rgb(32, 124, 124);">Nom de Matiere est Obligatoire</div>
+                    <!-- *ngIf="f.img.errors.required"  -->
+                </div>
+        </div>
+        <div class="form-row">
+            <div class="col-md-12">
+                <label for="validationCustom04" class="form-label" >Quelle niveau le cours est concerné *</label>
+                <!-- [ngClass]="{ 'is-invalid': submitted && f.niveau.errors }"  -->
+                <select class="form-select"  required formControlName="niveau"  >
+                    <option  selected="true">...</option>
+                    <option value="1er" >1er anneé</option>
+                    <option value="2eme"  >2eme année</option>
+                    <option value="3eme" >3eme année</option>
+                    <option value="4eme"  >4eme année</option>
+                    <option value="5eme">5eme année</option>
+                    <option value="6eme"  >6eme année</option>
+                    
+                </select>
+                <div class="invalid-feedback">
+                    <!--   *ngIf="submitted && f.niveau.errors"  -->
+                    <div >niveau est Obligatoire</div>
+                    <!--  *ngIf="f.niveau.errors.required" -->
+                    
+                </div> 
+               
+            </div>
+        </div>
+
+
+        <div class="form-group">
+            <button type="submit" class="btn btn-block create-account" >Ajouter Cours</button>
+            <!-- (click)="Addcour(courForm.value)" -->
+        </div>
+    </form>
+
+</div>
