--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.css
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 mat-toolbar {
-  background: #06BBCC;
+  background:#06BBCC;
   color: white;
 }
 
@@ -14,61 +14,51 @@ mat-sidenav {
   text-align: center;
   display: flex;
 }
-
 .content {
-
   border-radius: 10px;
   margin: 16px;
   margin-left: 32px;
-
-
   justify-content: center;
-  //align-items: auto;
-
-
-  color: lightgray;
+  align-items: auto;
 }
-
 
 
 mat-sidenav-container {
   height: calc(100vh - 65px);
 }
 
-.menu-button {
+.menu-button{
+  display: none;
+  background-color: #06BBCC;
+  border: none;
+  color: black;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
   font-size: 30;
 }
-
-mat-divider {
+mat-divider{
   margin-top: 16px;
   margin-bottom: 16px;
   background-color: antiquewhite;
 }
-
-.name {
+.name{
   margin: 0;
   margin-top: 8px;
   font-weight: normal;
 }
-
 .designation {
   margin-top: 2px;
   font-size: 0.7rem;
   color: lightgrey;
 }
-
 .avatar {
   margin-top: 16px;
   width: 100px;
   height: 100px;
   border-radius: 50%;
 }
-
-
 
 .badge {
   position: absolute;
@@ -84,3 +74,9 @@ mat-divider {
   color: #ffffff;
   text-align: center;
 }
+mat-icon-button{
+  background-color: transparent;
+}
+
+
+
