last gestion classe

--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/list-classe/list-classe.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/list-classe/list-classe.component.html
@@ -2,7 +2,7 @@
 <div class="content">
 
   <div class="container">
-    <h2 class="mb-5">Gestion des classe </h2>
+    <h2 class="mb-5">Listes des classe </h2>
 
     <div class="table-responsive">
 
@@ -12,6 +12,7 @@
             <th scope="col">Nom</th>
 
             <th scope="col">Niveau</th>
+            <th scope="col">Action</th>
           </tr>
         </thead>
         <tbody>
