gestion classe done

--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
@@ -69,7 +69,7 @@
           <mat-icon>school</mat-icon>
           <span>Gestion Pédagogique</span>
           <mat-menu #menu1="matMenu">
-              <button mat-menu-item routerLink="class"  >Classe</button>
+              <button mat-menu-item routerLink="classe"  >Classe</button>
               <button mat-menu-item routerLink="emplois">Emplois du temps</button>
               <button mat-menu-item routerLink="matiere">Matière</button>
               <button mat-menu-item routerLink="homework">HomeWork</button>
@@ -81,7 +81,7 @@
           <mat-icon>no_meeting_room</mat-icon>
           <span>Gestion des Présence</span>
           <mat-menu #menu="matMenu">
-              <button mat-menu-item routerLink="statuscongesens">Gestion des abscences</button>
+              <button mat-menu-item routerLink="statuscongesens">Gestion des absence</button>
               <button mat-menu-item routerLink="addconges">Gestion des congés</button>
           </mat-menu>
       </button>
