--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/enseignant-classe/enseignant-classe.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/enseignant-classe/enseignant-classe.component.html
@@ -4,25 +4,24 @@
   <div class="container">
     <div class="container">
       <div class="title-and-button">
-        <h1 class="title">Listes des classes</h1>
+        <h1 class="title">Listes des Enseignants dans la classe </h1>
         <button id="btnAdd" type="button" class="btn btn-info" routerLink="../addClasse" >Ajouter classe</button>
       </div>
     </div>
     <div class="table-responsive">
     <app-table [tableData]="classes"
-              [tableColumns]="classesTableColumns"
+              [tableColumns]="classesEnsTableColumns"
               [isFilterable]="true"
               [isPageable]="true"
-              [isDetailIcon]="true"
+              [isDetailIcon]="false"
               [paginationSizes]="[2,4,6]"
               [defaultPageSize]="4"
               (sort)="sortData($event)"
               [rowActionEditIcon]="'edit'"
               [rowActionDeleteIcon]="'delete'"
               [rowActionDetailIcon]="'remove_red_eye'"
-              (rowEditAction)="editerClasse($event)"
-              (rowDetailAction)="detailClasse($event)"
-              (rowDeleteAction)="deleteClasse($event)">
+              (rowEditAction)="editerEnsClasse($event)"
+              (rowDeleteAction)="deleteEnsClasse($event)">
 </app-table>
  </div>
 
