--- a/src/app/EduSchoolBackOffice/Components/gestionPresence/leave-type-list/leave-type-list.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPresence/leave-type-list/leave-type-list.component.html
@@ -1,4 +1,7 @@
-<table>
+
+<button mat-flat-button color="primary" style="margin-left: 1300px" (click)="openDialog()">Ajouter type de congés</button>
+<mat-divider></mat-divider>
+<table class="table table-striped custom-table">
   <thead>
   <tr>
     <th>Type</th>
