--- a/src/app/EduSchoolBackOffice/Components/gestionPresence/leave-type/leave-type.component.css
+++ b/src/app/EduSchoolBackOffice/Components/gestionPresence/leave-type/leave-type.component.css
@@ -1,21 +1,43 @@
-/* form.component.css */
-.example-form {
+.container {
   max-width: 400px;
   margin: 0 auto;
 }
 
-.example-full-width {
-  width: 100%;
+.form-title {
+  font-size: 24px;
   margin-bottom: 20px;
 }
 
-.submit-button {
-  width: 100%;
-  margin-top: 20px;
+.form-group {
+  margin-bottom: 20px;
 }
 
-@media (max-width: 600px) {
-  .example-form {
-    padding: 20px;
-  }
+.form-label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.submit-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
 }
