--- a/src/app/EduSchoolBackOffice/Components/gestionPresence/leave-type/leave-type.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPresence/leave-type/leave-type.component.html
@@ -1,24 +1,20 @@
-<h3>Ajouter un nouveau type de congé</h3>
-<form [formGroup]="leaveTypeForm">
-  <div class="form-group">
-    <label for="newLeaveType">Nom du type de congé :</label>
-    <input type="text" id="newLeaveType" name="newLeaveType" formControlName="type" >
-    <label for="description">description :</label>
-    <textarea id="description" formControlName="description"></textarea>
-  </div>
-  <button type="submit" (click)="addLeaveType(leaveTypeForm.value)">Ajouter</button>
-</form>
+<div class="container" style="padding-top: 60px">
+  <h3 class="form-title">Ajouter un nouveau type de congé</h3>
+  <form [formGroup]="leaveTypeForm" class="leave-form">
+    <div class="form-group">
+      <label for="newLeaveType" class="form-label">Nom du type de congé :</label>
+      <input type="text" id="newLeaveType" name="newLeaveType" formControlName="type" class="form-input">
+    </div>
+    <div class="form-group">
+      <label for="description" class="form-label">Description :</label>
+      <textarea id="description" formControlName="description" class="form-textarea"></textarea>
+    </div>
+    <button type="submit" mat-flat-button color="primary"(click)="addLeaveType(leaveTypeForm.value)">Ajouter</button>
+    <button mat-flat-button color="warn" mat-dialog-close>Cancel</button>
+
+  </form>
+</div>
 
 <!-- form.component.html -->
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <input matInput placeholder="Nom">
-  </mat-form-field>
 
-  <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="Message"></textarea>
-  </mat-form-field>
-
-  <button mat-raised-button color="primary">Envoyer</button>
-</form>
 
