--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.css
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.css
@@ -7,7 +7,7 @@ mat-sidenav {
   margin: 16px;
   width: 250px;
   border-right: none;
-  background: #06BBCC;
+  background: #06bbcc;
   color: white;
   border-radius: 5px;
   padding: 16px;
