--- a/src/app/EduSchoolBackOffice/Components/gestionCantine/group-user/group-user.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionCantine/group-user/group-user.component.html
@@ -1,11 +1,14 @@
 <div class="container" style="margin-top:50px ;">
-  <div class="row-3">
+  <div class="row-2">
     <h1>Responsable de la cantine  </h1>
 
       <div class="col">
           <div class="card custom-card">
-            <div class="card-body  d-flex align-items-center justify-content-center">
-                Nom Responsable
+            <div class="card-body  ">
+                Nom Responsable Mme <span style="font-weight: bold;">{{groupCantine[0]["nomResponsable"]}}</span>
+                <br>
+                <br>
+                Téléphone Mme <span style="font-weight: bold;">{{groupCantine[0]["telephone"]}}</span>
             </div>
         </div>
        </div>
@@ -13,17 +16,19 @@
 
        <div class="table-responsive">
         <app-table [tableData]="groupUserList"
-                  [tableColumns]="groupUserTableColumns"
-                  [isFilterable]="false"
-                  [isPageable]="true"
-                  [isDetailIcon]="false"
-                  [paginationSizes]="[2,4,6]"
-                  [defaultPageSize]="4"
-                  [rowActionEditIcon]="'edit'"
-                  [rowActionDeleteIcon]="'delete'"
-                  (rowEditAction)="editerGroupUser($event)"
-                  (rowDeleteAction)="deleteGroupUser($event)">
-    </app-table>
+        [tableColumns]="groupUserTableColumns"
+        [isFilterable]="true"
+        [isPageable]="true"
+        [isDetailIcon]="true"
+        [paginationSizes]="[2,4,6]"
+        [defaultPageSize]="4"
+        [rowActionEditIcon]="'edit'"
+        [rowActionDeleteIcon]="'delete'"
+        [rowActionDetailIcon]="'remove_red_eye'"
+        (rowEditAction)="editerGroupUser($event)"
+        (rowDetailAction)="detailGroupUser($event)"
+        (rowDeleteAction)="deleteGroupUser($event)">
+</app-table>
      </div>
      </div>
      </div>
