--- a/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/emplois-temps/emplois-temps.component.html
+++ b/src/app/EduSchoolBackOffice/Components/gestionPedagogique/classe/emplois-temps/emplois-temps.component.html
@@ -6,7 +6,7 @@
 
       </div>
       <div class="col-md-2" >
-          <form #addeventForm="ngForm" (ngSubmit)="saveEvent()" *ngIf="!connected">
+          <form #addeventForm="ngForm" (ngSubmit)="saveEvent()" >
 
 
               <h3>ajouter </h3>
