update gestion classe

--- a/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
+++ b/src/app/EduSchoolBackOffice/Components/Dashboards/dashboard/dashboard.component.html
@@ -71,7 +71,7 @@
           <mat-menu #menu1="matMenu">
               <button mat-menu-item routerLink="classe"  >Classe</button>
               <button mat-menu-item routerLink="matiere">Matière</button>
-              <button mat-menu-item routerLink="emplois">Emplois du temps</button>
+              <button mat-menu-item routerLink="emplois-temps">Emplois du temps</button>
               <button mat-menu-item routerLink="resultat">Resultat</button>
           </mat-menu>
       </button>
